force-app/main/default/objects/Comuna__c/Comuna__c.object-meta.xml
<CustomObject>
    <label>Comuna</label>
    <nameField>
        <label>Comuna Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comunas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>