force-app/main/default/objects/Comuna__c/fields/Condici_n_de_expedici_n__c.field-meta.xml
<CustomField>
    <fullName>Condici_n_de_expedici_n__c</fullName>
    <label>Condición de expedición</label>
    <length>2</length>
    <type>Text</type>
</CustomField>