force-app/main/default/objects/Comuna__c/fields/RegionCompleta__c.field-meta.xml
<CustomField>
    <fullName>RegionCompleta__c</fullName>
    <label>RegionCompleta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>